--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ robotpy_extras = [
     # "apriltag",
     "commands2",
     # "cscore",
-    # "navx",
+    "navx",
     # "pathplannerlib",
     # "phoenix5",
     # "phoenix6",
@@ -24,6 +24,7 @@ robotpy_extras = [
     # "romi",
     # "sim",
     # "xrp"
+    
 ]
 
 # Other pip packages to install
