--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2025.2.1.0"
+robotpy_version = "2025.2.1.3"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
@@ -22,7 +22,7 @@ robotpy_extras = [
     # "playingwithfusion",
     "rev",
     # "romi",
-    # "sim",
+    "sim",
     # "xrp"
     
 ]
